# ytrag

./: .gitignore  README.md  consolidar.py  limpiar.py  pyproject.toml  requirements.txt  yt-downloader.bash  ytrag.spec
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_cleaner.py  test_cli.py  test_consolidar.py  test_consolidator.py  test_downloader.py  test_limpiar.py  test_rate_limiter.py  test_utils.py
tests/fixtures/: expected_output.md  sample_input.vtt
ytrag/: __init__.py  __main__.py  cleaner.py  consolidator.py  downloader.py  main.py  rate_limiter.py  utils.py
