[project]
name = "ytrag"
version = "1.0.0"
description = "YouTube transcripts to RAG-ready volumes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "chakkyy" }]
keywords = ["youtube", "transcripts", "rag", "llm", "subtitles"]

dependencies = [
    "yt-dlp>=2024.1.1,<2026.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ytrag = "ytrag.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
